--- a/homepage.html
+++ b/homepage.html
@@ -3,13 +3,27 @@
   <head>
     <title>Platzi Games</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/ejercicio-pug.css">
+    <link rel="stylesheet" href="../css/ejercicio-pug.css">
   </head>
   <body>
     <header>
       <h1>PlatziGames</h1><a>Hola David</a>
     </header>
-    <h1>Homepage</h1>
+    <main class="intro"> 
+      <section class="intro__imagen">
+        <h1>MENU </h1>
+        <ul>
+          <li>Acerca</li>
+          <li>Noticias</li>
+          <li>Contacto</li>
+        </ul>
+      </section>
+      <section class="intro__contenido">
+        <h1>Homepage	</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, odio eum, veritatis impedit voluptatum illo at sequi debitis rerum, minima ut nihil. Qui corporis saepe fugit facilis voluptatibus odit aperiam?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora nulla doloribus officiis! Corrupti blanditiis animi, minima quae facere quos quisquam tempora facilis eveniet voluptate asperiores. Minus porro beatae iusto quae?</p><a class="boton">VER MAS</a>
+      </section>
+    </main>
     <footer>
       <h1>PlatziGames</h1>
       <ul>
